# GTServer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  conan.cmake  config.h  main.cpp
src/event/: event_context.h  event_pool.cpp  event_pool.h
src/event/text_events/: action.h  tank_id_name.h
src/network/: http.cpp  http.h
src/player/: player.cpp  player.h  player_pool.h
src/player/additional/: packet_sender.h  variantlist_sender.h
src/proton/: packet.h  variant.h
src/proton/utils/: common.h  text_scanner.h
src/server/: server.cpp  server.h  server_pool.cpp  server_pool.h
src/utils/: binary_reader.h  binary_writer.h  text.h
